# dooit

./: CHANGELOG.md  flake.nix  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml
dooit/: __main__.py
nix/: default.nix
site/: bun.lockb  package.json
site/docs/.vitepress/: config.mts
site/docs/.vitepress/theme/: index.ts
