[project]
requires-python = ">=3.9"
name = "dooit"
version = "3.3.4"
description = "A TUI Todo Manager"
authors = [
    {name = "kraanzu", email = "kraanzu@gmail.com"}
]
maintainers = [
    {name = "kraanzu", email = "kraanzu@gmail.com"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dooit-org/dooit"
repository = "https://github.com/dooit-org/dooit"
exclude = ["imgs"]
dependencies = [
    "click>=8.1.8",
    "platformdirs>=4.4.0",
    "pyperclip>=1.10.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
    "textual>=6.1.0",
    "tzlocal>=5.3.1",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "faker>=37.8.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.1",
    "textual-dev>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dooit = "dooit.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
ignore = ["E712"]

[tool.coverage.report]
omit = ["nix/store/*", "dooit/utils/default_config.py"]
